--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "recipe-ui",
+  "version": "0.1.0",
+  "author": {
+    "name": "Ernest Lukos",
+    "email": "ernest-lukos@hotmail.co.uk"
+  },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
