--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
       "favicon": "./assets/images/favicon.png"
     },
     "description": "",
-    "githubUrl": "https://github.com/Codefingers/recipe-ui"
+    "githubUrl": "https://github.com/Codefingers/recipe-ui",
+    "extra": {
+      "baseApiUrl": "http://64.227.43.81/api",
+      "testEmail": "test-user@test.com",
+      "testPassword": "Password1!"
+    }
   }
 }
