--- a/package.json
+++ b/package.json
@@ -48,10 +48,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.10",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.62.13",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-preset-expo": "~8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "jest": "^26.4.2",
     "jest-expo": "~38.0.0",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.3.0",
+    "ts-mockery": "^1.2.0",
     "typescript": "~3.9.5"
   },
   "private": true
