--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/moxios": "^0.4.9",
     "@types/styled-components": "^5.1.1",
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
@@ -32,21 +35,34 @@
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.2",
     "expo-web-browser": "~8.3.1",
+    "moxios": "^0.4.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-dotenv": "^2.3.0",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.10",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.62.13",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-preset-expo": "~8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "jest": "^26.4.2",
     "jest-expo": "~38.0.0",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.3.0",
+    "ts-mockery": "^1.2.0",
     "typescript": "~3.9.5"
   },
   "private": true
